# CxxGarbageCollection

./: .gitignore  CMakeLists.txt  MemoryBadAlloc.cpp  MemoryBadAlloc.h  MemoryManager.cpp  MemoryManager.h  Object.cpp  Object.h  README.md  main.cpp  type_pointer.c
